# treadstone

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  cursor-cloud.md  index.html  landing.html  openapi-client-config.yaml  pyproject.toml  sandbox.md
.cursor/: cursor-cloud.md
.cursor/agents/: ship-pr-release.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: cd-web.yml  cd.yml  ci.yml  k8s-e2e.yml  project.yml  release.yml  sandbox-image-reconstructed.yml  sandbox-image.yml  update-prod-image.yml
alembic/: env.py
alembic/versions/: 0049d56201ad_add_k8s_claim_name_and_make_image_.py  0d5c9f8a7b6e_add_platform_limits_table.py  1eeb226c1bf3_merge_usage_summary_indexes_with_.py  2457b93fc846_add_cli_login_flow_table.py  28823e70456d_add_waitlist_application_table.py  2b57d0d7c7d8_hash_api_keys_and_drop_plaintext_secret.py  2b7c4d9e1f6a_refresh_default_tier_limits.py  2e0d7f4e5e9d_add_usage_summary_period_indexes.py  351062994638_add_is_enabled_to_api_key.py  3a90839b7b72_soft_delete_sandbox_with_partial_unique_.py  4b3f2f3fd7d8_remove_restore_only_target_status.py  6442e2b785c9_add_waitlist_github_or_portfolio_url.py  687cfa1d22de_update_tier_template_defaults.py  7d32ba24d363_add_sandbox_table.py  8d53041b011f_merge_platform_limits_and_password_.py  90759a4d649a_add_email_verification_log_table.py  9d0f6b7c2a1e_add_cold_snapshot_fields_to_sandboxs.py  9f3a6a152a5c_add_metering_tables.py  9f8b8c4d6e21_scope_sandbox_names_and_hard_delete.py  a1b2c3d4e5f6_add_sandbox_gmt_last_active.py  a1b2c3d4e5f8_rename_enterprise_tier_to_custom.py  a30f8dfeb16e_add_user_oauth_account_invitation_api_.py  a4d2e5f7c1b9_add_password_reset_request_log.py  a54ae0733978_rename_k8s_claim_name_to_k8s_sandbox_.py  a5f9b2c17d61_add_has_local_password_to_user.py  b1c2d3e4f5a6_drop_unused_user_columns.py  b1d94d9b8d42_add_audit_event_table.py  b2c3d4e5f6a7_add_performance_indexes.py  bc37bfeef9ac_add_provision_mode_persist_storage_size_.py  c3d4e5f6a7b8_add_user_feedback_table.py  c4d5e6f7a8b9_metering_system_overhaul.py  c8e7a2f0b1d4_add_api_key_scopes_and_sandbox_grants.py  c9d27ea3b835_initial_schema.py  d4e5f6a7b8c9_plan_c_acs_startup_tier_defaults.py  d68520294aa5_remove_invitation_table_and_add_oauth_.py  d7e8f9a0b1c2_split_credit_grant_into_compute_and_storage.py  (+4 more)
cli/: README.md  pyproject.toml
cli/treadstone_cli/: __main__.py  _client.py  _guide_text.py  api_keys.py  auth.py  config_cmd.py  guide.py  main.py  sandboxes.py  skills_cmd.py  system.py  templates.py
deploy/: README.md  deploy-and-e2e-test.md
docs/: README.md  e2e-test-redesign.md
e2e/: index.html
examples/: 01_create.py  02_list.py  03_lifecycle.py  04_data_plane.py  README.md  _shared.py  http_end_to_end.py  sdk_end_to_end.py
scripts/: check-k8s-context.sh  down.sh  e2e-test.sh  e2e_site.py  export-k8s-logs.sh  export_openapi.py  gen-e2e-report.py  generate_public_docs.py  install.ps1  install.sh  kind-setup.sh  sandbox_openapi_base.json  set_release_versions.py  smoke-web.sh  up.sh  update_prod_image.py  wait-k8s.sh
security/: security-audit-2026-04-17.md
tests/: conftest.py  test_health.py
treadstone/: config.py  docs_manifest.py  main.py  openapi_spec.py
web/: Dockerfile  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
xiaohongshu_feed_sample/: explore_feed.md  navigate_feed_snapshot.txt  post1_page.md  post2_page.md  post3_page.md  posts_extracted.json
(+3719 files in other folders)
