[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treadstone"
version = "0.8.8"
description = "Agent-native sandbox service. Run code, build projects, deploy environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "httpx-oauth>=0.16.1",
    "kr8s>=0.20.15",
    "pydantic[email]>=2.12.5",
    "resend>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "auth0-python>=4.2.0,<5.0.0",
    "click>=8.1",
    "httpx>=0.28.1",
    "k8s-agent-sandbox>=0.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-freezer>=0.4.9",
    "rich>=14.0",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["sdk/", "cli/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 需要真实数据库连接的集成测试",
]
addopts = "-m 'not integration' --tb=short"
